@@ -1,0 +1,121 @@
+Return-Path: <>
+Received: from mail.fry-it.com ([unix socket])
+	by mail1 (Cyrus v2.1.18-IPv6-Debian-2.1.18-5.1) with LMTP; Wed, 05 Aug 2009 13:02:01 +0100
+X-Sieve: CMU Sieve 2.2
+Received: from relay.nhs.uk (mailout.nhs.uk [212.137.44.177])
+	by mail.fry-it.com (Postfix) with ESMTP id 07BEB1CF001C
+	for <it@it.fry-it.com>; Wed,  5 Aug 2009 13:01:32 +0100 (BST)
+Received: from avas-checker
+	by relay-outbound-1 with esmtp (Relay-Software 4.52)
+	id 1MYfBU-0008On-5Y
+	for it@it.fry-it.com; Wed, 05 Aug 2009 13:01:32 +0100
+Received: from relay.nhs.uk (rlmta10.swi.contact.secure-ops.net [192.168.129.10])
+	by rlavas05.swi.contact.secure-ops.net (MOS 3.8.3-GA)
+	with ESMTP id ELI81966;
+	Wed, 5 Aug 2009 13:01:32 +0100 (BST)
+Received: from [10.203.172.29] (helo=sabpexfe01.xsabp.nhs.uk)
+	by relay-inbound-10 with esmtp (Relay-Software 4.52)
+	id 1MYfBU-0001uW-YJ
+	for it@it.fry-it.com; Wed, 05 Aug 2009 13:01:32 +0100
+From: postmaster@sabp.nhs.uk
+To: mail@example.com
+Date: Wed, 5 Aug 2009 13:01:19 +0100
+MIME-Version: 1.0
+Content-Type: multipart/report; report-type=delivery-status;
+	boundary="9B095B5ADSN=_01CA0BCE00FBE39300001FC8sabpexfe01.xsabp"
+X-DSNContext: 335a7efd - 4523 - 00000001 - 80040546
+Message-ID: <rNXvOFsxr00001267@sabpexfe01.xsabp.nhs.uk>
+Subject: Delivery Status Notification (Failure)
+
+This is a MIME-formatted message.  
+Portions of this message may be unreadable without a MIME-capable mail program.
+
+--9B095B5ADSN=_01CA0BCE00FBE39300001FC8sabpexfe01.xsabp
+Content-Type: text/plain; charset=unicode-1-1-utf-7
+
+This is an automatically generated Delivery Status Notification.
+
+Delivery to the following recipients failed.
+
+       Denise.Philo@sabp.nhs.uk
+
+
+
+
+--9B095B5ADSN=_01CA0BCE00FBE39300001FC8sabpexfe01.xsabp
+Content-Type: message/delivery-status
+
+Reporting-MTA: dns;sabpexfe01.xsabp.nhs.uk
+Received-From-MTA: dns;relay.nhs.uk
+Arrival-Date: Wed, 5 Aug 2009 13:01:19 +0100
+
+Final-Recipient: rfc822;Denise.Philo@sabp.nhs.uk
+Action: failed
+Status: 5.1.1
+
+--9B095B5ADSN=_01CA0BCE00FBE39300001FC8sabpexfe01.xsabp
+Content-Type: message/rfc822
+
+Received: from relay.nhs.uk ([194.62.42.123]) by sabpexfe01.xsabp.nhs.uk with Microsoft SMTPSVC(6.0.3790.3959);
+	 Wed, 5 Aug 2009 13:01:19 +0100
+Received: from avas-checker
+	by relay-outbound-6 with esmtp (Relay-Software 4.52)
+	id 1MYfBH-0005Jo-KW
+	for Denise.Philo@sabp.nhs.uk; Wed, 05 Aug 2009 13:01:19 +0100
+Received: from relay.nhs.uk (rlmta04.swi.contact.secure-ops.net [192.168.129.4])
+	by rlavas14.swi.contact.secure-ops.net (MOS 3.8.3-GA)
+	with ESMTP id DAX00708;
+	Wed, 5 Aug 2009 13:27:30 +0100 (BST)
+Received: from mail-hurdle
+	by relay-inbound-4 with esmtp (Relay-Software 4.52)
+	id 1MYfBG-0005Mh-Fo
+	for Denise.Philo@sabp.nhs.uk; Wed, 05 Aug 2009 13:01:18 +0100
+Received: from mail.fry-it.com (mail.fry-it.com [80.68.212.3])
+	by rlmh06.swi.contact.secure-ops.net (MOS 3.8.3-GA)
+	with ESMTP id CTG59573;
+	Wed, 5 Aug 2009 13:01:18 +0100 (BST)
+Received: from [80.68.212.12] (fryit2.fry-it.com [80.68.212.12])
+	by mail.fry-it.com (Postfix) with ESMTP id 9E53E1CF001C
+	for <Denise.Philo@sabp.nhs.uk>; Wed,  5 Aug 2009 12:31:49 +0100 (BST)
+MIME-Version: 1.0
+Content-Type: text/plain; charset="us-ascii"
+Content-Transfer-Encoding: 7bit
+From: BWVH Issue Tracker <it@fry-it.com>
+To: Denise.Philo@sabp.nhs.uk
+Subject: BWVH Issue Tracker: #0202 PART CLOSED
+IssueTrackerProduct_IssueID: bwvh#0202
+Message-Id: <20090805113149.9E53E1CF001C@mail.fry-it.com>
+Date: Wed,  5 Aug 2009 12:31:49 +0100 (BST)
+X-Junkmail-Status: score=10/50, host=rlavas14.swi.contact.secure-ops.net
+X-Junkmail-SD-Raw: score=unknown,
+	refid=str=0001.0A0B0203.4A79748F.011D:SCFSTAT4134210,ss=1,fgs=0,
+	ip=80.68.212.3,
+	so=2006-12-20 11:47:04,
+	dmn=5.7.1/2009-06-05
+X-Junkmail-IWF: false
+X-Mirapoint-RAPID-Raw: score=unknown(0),
+	refid=str=0001.0A0B0203.4A79748F.011D:SCFSTAT4134210,ss=1,fgs=0,
+	ip=80.68.212.3,
+	so=2006-12-20 11:47:04,
+	dmn=5.7.1/2009-06-05
+X-Mirapoint-Loop-Id: a61200b39dd0d9125e10d79fa1debbbb
+Return-Path: it@it.fry-it.com
+X-OriginalArrivalTime: 05 Aug 2009 12:01:19.0048 (UTC) FILETIME=[7133E480:01CA15C4]
+
+05 Aug 2009 12:31
+Pavel Kunc has responded to "PART CLOSED"
+https://it.fry-it.com/CAMHSReportage/bwvh/0202
+
+Change:
+    Added Issue followup
+
+Comment:
+   I can delete the record if it's fine.
+
+https://it.fry-it.com/CAMHSReportage/bwvh/0202#i1
+
+--
+BWVH Issue Tracker <https://it.fry-it.com/CAMHSReportage/bwvh>
+
+
+--9B095B5ADSN=_01CA0BCE00FBE39300001FC8sabpexfe01.xsabp--
